--- a/shared/src/main/res/drawable/message_square_received_background.xml
+++ b/shared/src/main/res/drawable/message_square_received_background.xml
@@ -17,6 +17,6 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/ripple">
 
-    <item android:drawable="@drawable/message_sent" />
+    <item android:drawable="@drawable/message_square_received" />
 
 </ripple>
