--- a/shared/src/main/res/layout/message_round_sent.xml
+++ b/shared/src/main/res/layout/message_round_sent.xml
@@ -15,72 +15,64 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    android:gravity="end"
+    android:layout_marginBottom="6dp"
+    android:layout_marginTop="6dp"
+    android:background="@drawable/focusable_background"
     android:focusable="true"
-    android:background="@drawable/focusable_background">
+    android:gravity="end"
+    android:orientation="vertical"
+    android:paddingEnd="8dp"
+    android:paddingStart="8dp">
 
     <LinearLayout
+        android:id="@+id/message_holder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/message_sent_background"
+        android:background="@drawable/message_round_sent_background"
         android:backgroundTint="@color/drawerBackground"
+        android:clickable="true"
         android:maxWidth="@dimen/max_message_width"
         android:minWidth="@dimen/min_mms_picture_width"
-        android:paddingStart="8dp"
+        android:orientation="vertical"
         android:paddingEnd="20dp"
-        android:clickable="true"
-        android:id="@+id/message_holder">
+        android:paddingStart="8dp"
+        android:gravity="center_vertical">
 
         <ImageView
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxHeight="@dimen/max_message_width"
-            android:scaleType="centerInside"
-            android:id="@+id/image"
-            android:transitionName="image"
             android:layout_marginBottom="6dp"
             android:layout_marginStart="2dp"
-            android:contentDescription="@string/mms_image" />
+            android:contentDescription="@string/mms_image"
+            android:maxHeight="@dimen/max_message_width"
+            android:scaleType="centerInside"
+            android:transitionName="image" />
 
         <xyz.klinker.messenger.shared.view.emoji.EmojiableTextView
+            android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="@dimen/max_message_width"
-            android:textSize="16sp"
+            android:padding="6dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
             android:textColor="@color/primaryText"
-            android:paddingTop="3dp"
-            android:paddingBottom="2dp"
-            android:layout_marginTop="-6dp"
-            android:layout_marginBottom="3dp"
-            android:id="@+id/message" />
+            android:textSize="16sp"
+            android:gravity="center_vertical" />
 
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginTop="-16dp"
-        android:src="@drawable/ic_done"
-        android:tint="@color/primaryText"
-        android:layout_marginEnd="12dp"
-        android:contentDescription="@string/delivered" />
-
     <TextView
+        android:id="@+id/timestamp"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/timestamp_height"
-        android:textSize="12sp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="-2dp"
         android:textColor="@color/secondaryText"
-        android:id="@+id/timestamp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp" />
+        android:textSize="12sp" />
 
 </LinearLayout>
