--- a/shared/src/main/res/layout/message_square_received.xml
+++ b/shared/src/main/res/layout/message_square_received.xml
@@ -22,7 +22,6 @@
     android:layout_marginBottom="8dp"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
-    android:gravity="end"
     android:focusable="true"
     android:background="@drawable/focusable_background">
 
@@ -30,11 +29,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/message_sent_background"
-        android:backgroundTint="@color/materialRed"
+        android:background="@drawable/message_square_received_background"
+        android:backgroundTint="@color/colorPrimary"
         android:maxWidth="@dimen/max_message_width"
-        android:paddingStart="8dp"
-        android:paddingEnd="20dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="8dp"
         android:clickable="true"
         android:id="@+id/message_holder">
 
@@ -47,7 +46,7 @@
             android:id="@+id/image"
             android:transitionName="image"
             android:layout_marginBottom="6dp"
-            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
             android:contentDescription="@string/mms_image" />
 
         <xyz.klinker.messenger.shared.view.emoji.EmojiableTextView
@@ -68,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp">
 
@@ -77,15 +76,16 @@
             android:layout_height="@dimen/timestamp_height"
             android:textSize="12sp"
             android:textColor="@color/secondaryText"
-            android:layout_marginEnd="8dp"
-            android:id="@+id/timestamp" />
+            android:id="@+id/contact"
+            android:visibility="gone"
+            android:layout_marginEnd="2dp" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/timestamp_height"
             android:textSize="12sp"
             android:textColor="@color/secondaryText"
-            android:text="@string/failed" />
+            android:id="@+id/timestamp" />
 
     </LinearLayout>
 
