cleanup the scheduled messages

--- a/shared/src/main/res/layout/item_scheduled_message.xml
+++ b/shared/src/main/res/layout/item_scheduled_message.xml
@@ -43,6 +43,9 @@
             android:layout_height="wrap_content"
             android:maxWidth="@dimen/max_message_width"
             android:textSize="16sp"
+            android:padding="6dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
             android:textColor="@color/primaryText"
             android:id="@+id/message" />
 
