--- a/api_implementation/src/main/res/values-fr/api_string.xml
+++ b/api_implementation/src/main/res/values-fr/api_string.xml
@@ -16,9 +16,9 @@
   -->
 <resources>
     <string name="api_login">Se connecter</string>
-    <string name="api_signup">S\'enregistrer</string>
-    <string name="api_signup_failed">Impossible de s\'inscrire sur cet appareil, vous devez premièrement vous enregistrer auprès de l\'appareil principal qui possède un numéro de téléphone !</string>
-    <string name="api_skip_signup">Ou, si vous voulez juste utiliser l\'application sur cet appareil et non sur le réseau avec des fonctionnalités telles que les SMS/MMS à partir de votre tablette ou d\'un ordinateur, vous pouvez ignorer cette étape.</string>
+    <string name="api_signup">S\'inscrire</string>
+    <string name="api_signup_failed">Impossible de s\'inscrire sur cet appareil, vous devez vous enregistrer d\'abord sur votre appareil principal possédant numéro de téléphone !</string>
+    <string name="api_skip_signup">Ou, si vous voulez juste utiliser l\'application sur cet appareil sans les fonctionnalités réseaux, telles que la rédaction de texto à partir d\'une tablette ou d\'un ordinateur, vous pouvez ignorer cette étape.</string>
     <string name="api_skip">Ignorer</string>
     <string name="api_email">Adresse courriel</string>
     <string name="api_password">Mot de passe</string>
@@ -28,7 +28,7 @@
     <string name="api_phone_number">Numéro de téléphone</string>
     <string name="api_connecting">Connexion au serveur...</string>
     <string name="api_device_error">Une erreur est survenue en ajoutant votre appareil, veuillez réessayer !</string>
-    <string name="api_add_second_primary_device">Il semble que vous ayez déjà un appareil principal (%1$s) pour votre compte, et vous n\'en avez le droit qu\'à un seul. Voulez-vous remplacer l\'appareil principal par celui-ci, ce qui supprimerait l\'ancien ?</string>
+    <string name="api_add_second_primary_device">Il semble que vous ayez déjà un appareil principal (%1$s) sur votre compte, mais il ne peux y en avoir qu\'un seul. Voulez-vous remplacer l\'appareil principal par celui-ci ?</string>
     <string name="api_yes">Oui</string>
     <string name="api_no">Non</string>
     <string name="api_no_email">Aucune adresse courriel n\'a été saisie</string>
@@ -49,9 +49,9 @@
     <string name="api_activate_2_1">Sur le site web</string>
     <string name="api_activate_2_2">Entrer le code à droite</string>
     <string name="api_activate_2_3">pour connecter votre compte</string>
-    <string name="api_confirm_password">S\'il vous plaît, veuillez confirmer votre mot de passe :</string>
+    <string name="api_confirm_password">Merci de confirmer votre mot de passe :</string>
     <string name="api_wrong_password">Confirmation échouée. Votre mot de passe est correct ?</string>
-    <string name="api_email_taken">Erreur de connexion, avez-vous déjà un compte associé à cette adresse mail ?</string>
+    <string name="api_email_taken">Erreur de connexion, avez-vous déjà un compte associé à ce courriel ?</string>
     <string name="api_confirm">Confirmer</string>
     <string name="api_continue">Continuer</string>
 </resources>
