--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,15 @@
 <changelog>
 
     <version
+        name="3.1.3"
+        description="June 20th, 2018">
+        <!-- Duplicate scheduled messages (I am just not allowing that broadcast receiver to run more than once every 20 seconds -->
+        <!-- Changes to the group message coloring (changes are now persisted on the same thread (UI) to prevent race conditions) -->
+        <!-- Changes to how sharing from other apps works https://github.com/klinker-apps/messenger-issues/issues/681 -->
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="3.1.2"
         description="June 12th, 2018">
         <text>Bug fixes</text>
