--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -23,6 +23,7 @@
         <!-- Changes to the group message coloring (changes are now persisted on the same thread (UI) to prevent race conditions) -->
         <!-- Changes to how sharing from other apps works https://github.com/klinker-apps/messenger-issues/issues/681 -->
         <!-- Changes to the delivery receiver, if the database isn't able to find the message by searching https://github.com/klinker-apps/messenger-issues/issues/683 -->
+        <!-- Apply the apache http library through the sms/mms library's v5.0.2 -->
         <text>Bug fixes</text>
     </version>
 
