--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,13 @@
 <changelog>
 
     <version
+        name="3.1.4"
+        description="June 26th, 2018">
+        <!-- roll back shortcut badger -->
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="3.1.3"
         description="June 20th, 2018">
         <!-- Duplicate scheduled messages (I am just not allowing that broadcast receiver to run more than once every 20 seconds -->
