--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,13 @@
 <changelog>
 
     <version
+        name="3.2.2"
+        description="June 14th, 2018">
+        <!-- Allow composing conversations with images, from the pulsesms.app web app -->
+        <text>Changes to support new web functionality</text>
+    </version>
+
+    <version
         name="3.2.1"
         description="June 11th, 2018">
         <!-- Issue with the main fragment getting reset to the conversation list, when the device is rotated -->
