--- a/shared/src/main/res/layout/preference_notifications.xml
+++ b/shared/src/main/res/layout/preference_notifications.xml
@@ -158,7 +158,8 @@
         android:id="@+id/channels_disclaimer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/channels_global_warning_2"
+        android:layout_marginTop="12dp"
+        android:text="@string/channels_global_warning_3"
         android:textColor="@color/subscriptionPrimaryText" />
 
 </LinearLayout>
