--- a/api_implementation/src/main/res/values/api_string.xml
+++ b/api_implementation/src/main/res/values/api_string.xml
@@ -57,6 +57,7 @@
     <string name="api_confirm_password">Please confirm your password:</string>
     <string name="api_wrong_password">Confirmation failed. Is your password correct?</string>
     <string name="api_email_taken">An error occurred logging in, do you already have an account with this email?</string>
+    <string name="api_password_to_long">Your password must be under 55 characters.</string>
     <string name="api_confirm">Confirm</string>
     <string name="api_continue">Continue</string>
 
