--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -265,8 +265,8 @@
 
                     <android.support.design.widget.FloatingActionButton
                         android:id="@+id/send"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
                         android:contentDescription="@string/send_message"
